# HM_HRT

./: .gitignore  README.md  README_python.md  pyproject.toml
.github/workflows/: pr.yaml
data/solutions/: all_ga.pkl
data/solutions/optimal/: OptimalSolutions.csv
notebooks/: decisions_decay.ipynb  step_00_read_the_instances_data.ipynb  step_01_analyse_jobs.ipynb  step_02_first_search_algorithm.ipynb  step_02_implement_GA_and_validate.ipynb  step_02_with_SAC_implement_GA_and_validate.ipynb  step_02_without_SAC_implement_GA_and_validate.ipynb  step_03_explore_with_GA.ipynb  step_03_implement_GA_and_validate.ipynb  step_03_loop_on_the_GA.ipynb  step_04_loop_on_the_GA.ipynb  step_04_run_for_all_instances.ipynb  step_05_analyse_results.ipynb  step_05_run_for_all_instances.ipynb  step_06_gantt_charts.ipynb
src/data_connectors/: read_input_files.py  read_solutions_files.py  write_solution_files.py
src/data_preparation/: search_space.py
src/data_visualisation/: gantt.py  prepare_resources.py
src/ga/: first_population.py
src/genetic_algorithm/: chromosome.py  constants.py  feasibility.py  first_population.py  fitness.py  ga_pipeline.py  genetic_algorithm.py  next_population.py  replication.py  time_allocation.py
