[tool.poetry]
name = "hm-hrt"
version = "0.1.0"
description = ""
authors = ["PLRodrigues <35863590+plrodrigues@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
