[tool.poetry]
name = "hm-hrt"
version = "0.1.0"
description = ""
authors = ["PLRodrigues <35863590+plrodrigues@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"
mypy = "0.910"
numpy = "^1.22.3"
black = "22.3.0"
flake8 = "4.0.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 80
target_version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3

[mypy]
python_version = 3.10


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
